--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel='stylesheet' href='css/style.css'>
     <title>Malton</title>
 </head>
+
 <body>
     <!--
     <div id='under_constructing' style='position:absolute;top:0;left:0;z-index:1000;background-color: white;width:100%;height:100%;display: flex;align-items: center;justify-content: center;flex-direction: column;'>
@@ -29,18 +30,17 @@
                 <span>o</span>
                 <span>n</span>
             </h2>
-            <p class='no-margin'>Developer</p>
-            <p>
-                大阪大学工学部　電子情報工学科
-            </p>
+            <div class='links'>
+                <p><a class='a1 no-margin'>about me</a></p>
+                <p><a class="a2">about this site</a></p>
+            </div>
         </main>
     </div>
+
     <div id='square1'></div>
     <div id='square2'></div>
     <div id='square3'></div>
     <div id='square4'></div>
-
-    
 
     <script src='js/main.js'></script>
 </body>
