--- a/index.html
+++ b/index.html
@@ -164,8 +164,10 @@
                 </div>
             </div>
             <div class="work">
-                <div class="work-img">
-                    <img class="work-img" src="img/sechack.png" alt="work-img">
+                <div class="work-img link">
+                    <a href="https://sechack365.nict.go.jp/achievement/2019/index.html#c05" target="_blank">
+                        <img class="work-img" src="img/sechack.png" alt="work-img">
+                    </a>
                 </div>
                 <div class="work-name">
                     <h2>SecHack365'19</h2>
