--- a/index.html
+++ b/index.html
@@ -64,12 +64,30 @@
                 </div>
                 <div class="member-name">
                     <h2>Malton</h2>
-                    <p>誰の役にも立たないようなアプリを作るのが好きな大学生。Webとか機械学習とか競技プログラミングとか量子アルゴリズムとかUnityとかの話ができる。声質変換がマイブーム</p>
+                    <p>誰の役にも立たないようなアプリを作るのが好きな大学生。Webとか機械学習とか競技プログラミングとか量子アルゴリズムとかUnityとかの話ができる。</p>
                 </div>
             </div>
         </div>
-
-        <h1>Works / Activities</h1>
+        <h1>Recent  Activities</h1>
+        <div class="flex">
+            <p class="center" style="max-width: 600px;">最近の実績はブログにまとめてあります。これは公開しにくい（フロントエンドで完結しない / フロントエンドを作っていない）成果が増えたことによるものです。</p>
+        </div>
+        <div class="flex">
+            <div class="work">
+                <!-- <div class="work-img link">
+                    <a href="https://blog.maltonn.com/" target="_blank">
+                        <img class="work-img" src="img/blog.png" alt="work-img">
+                    </a>
+                </div> -->
+                <div class="work-name">
+                    <a href="https://blog.maltonn.com/" target="_blank">
+                        <h2>blog.maltonn.com</h2>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <h1>Old Works / Activities</h1>
+        <p class="center">2022年より前の実績など</p>
         <div class="flex">
             <div class="work">
                 <div class="work-img link">
