--- a/letter/index.html
+++ b/letter/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>書き出しの図書館</title>
+  <title>手紙</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="sakubun.css">
 </head>
@@ -18,9 +18,9 @@
       <p id="kakidashi"></p>
       <p>　</p>
       <p>
-        <span id="credit">
+        <!-- <span id="credit">
           クレジットを表示
-        </span>
+        </span> -->
       </p>
     </div>
   </div>
