--- a/letter/index.html
+++ b/letter/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <div id="loader"></div>
+  <div id="scrolltoright">please scroll to right→</div>
   
   <div id="container">
     <div class="sakubun">
@@ -24,11 +25,11 @@
       </p>
     </div>
   </div>
-  <div id="ink">
+  <!-- <div id="ink">
     <span id="xbtn"></span>
     <p id="author">ここに作者</p>
     <h1 id="title">ここにタイトル</h1>
-  </div>
+  </div> -->
   <script src="main.js"></script>
 
 </body>
