--- a/kakidashi/index.html
+++ b/kakidashi/index.html
@@ -35,6 +35,7 @@
       <span id="xbtn"></span>
       <p id="author">ここに作者</p>
       <h1 id="title">ここにタイトル</h1>
+      <p id="addition">【漫画】</p>
     </div>
   </div>
   <script src="main.js"></script>
