--- a/qr/index.html
+++ b/qr/index.html
@@ -10,9 +10,9 @@
     <div class="container">
         <h1>QR Code Generator</h1>
         <textarea id="text" placeholder="ここにテキストを入力" ></textarea>
-        <div>
+        <!-- <div>
             <button id="btn">Generate!</button>
-        </div>
+        </div> -->
         <div id="output"></div>
     </div>
 
